# bullet-trade

./: .gitignore  README.md  README_GUI.md  pyproject.toml  requirements.txt  start_gui.py  选股公式(1).txt  需求.md
bullet_trade/: __init__.py
bullet_trade/cli/: main.py
bullet_trade/core/: engine.py  live_engine.py
bullet_trade/data/: api.py  cache.py
bullet_trade/data/providers/: jqdata.py
bullet_trade/gui/: __init__.py  __main__.py  api_client.py  app.py  auth_manager.py  config_manager.py  login_dialog.py  main_window.py  message_helper.py  strategy_manager.py  theme.py
bullet_trade/gui/pages/: __init__.py  backtest_page.py  config_page.py  live_page.py  optimize_page.py  report_page.py  strategy_page.py
bullet_trade/gui/widgets/: __init__.py  strategy_params_widget.py
bullet_trade/utils/: env_loader.py  strategy_params.py
docs/: tick.md
runtime/: g.pkl  live_state.json
strategies/: README.md  simple_test_strategy.py  test_strategy.py  xuangu_formula_strategy.py
strategy_crypto/: Cargo.toml
strategy_crypto/src/: lib.rs
